--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ body{
   position: absolute;
   color: #000;
   top: 30px;  
-  left: 250;
+  left: 250px;
   width: 500px;
   height: 100%;
   text-align:justify;
