--- a/style.css
+++ b/style.css
@@ -133,9 +133,9 @@ body{
   top: 30px;  
   left: 250px;
   width: 500px;
-  height: 100%;
+  height: 540px;
   text-align:justify;
-  overflow:hidden;
+  overflow:auto;
   white-space:no-wrap;
   font-family: Verdana, sans-serif;
   font-size: 10px;  
